--- a/todos_api/views/index.html
+++ b/todos_api/views/index.html
@@ -1,9 +1,16 @@
 <head>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script 
+        src="https://code.jquery.com/jquery-3.3.1.min.js" 
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" 
+        crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
     <h1>This is a index page</h1>
 
     <p>todo list goes here</p>
+    
+    <script type="text/javascript" src="app.js"></script>
 </body>
