--- a/todos_api/views/index.html
+++ b/todos_api/views/index.html
@@ -8,9 +8,16 @@
 </head>
 
 <body>
-    <h1>This is a index page</h1>
-
-    <p>todo list goes here</p>
+    <header>
+        <h1>todo<span>list</span></h1>
+        <h2>A simple todo list app built with node</h2>
+    </header>
+    
+    <section class="form">
+        <input type="text" id="todoInput" placeholder="Insert your task here..."/>
+    </section>
+    
+    <ul class="list"></ul>
     
     <script type="text/javascript" src="app.js"></script>
 </body>
